sfdx-source/force-app/main/default/objects/Rate_Card_Tier__c/Rate_Card_Tier__c.object-meta.xml
<CustomObject>
    <description>This object is set to enter Rate Card Tiers</description>
    <label>Rate Card Tier</label>
    <nameField>
        <displayFormat>RCT-{00}</displayFormat>
        <label>Rate Card Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>