sfdx-source/force-app/main/default/objects/Rate_Card_Tier__c/fields/Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>Fee_Value__c</fullName>
    <description>LEM- 8765 Initial Set up for Rate Card Tiers</description>
    <label>Fee Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>