sfdx-source/force-app/main/default/objects/Rate_Card_Tier__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <description>LEM- 8765 Initial Set up for Rate Card Tiers</description>
    <label>Rate Card</label>
    <referenceTo>Rate_Card__c</referenceTo>
    <relationshipLabel>Rate Card Tiers</relationshipLabel>
    <relationshipName>Rate_Card_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>